--- a/meetup-02/demo/package.json
+++ b/meetup-02/demo/package.json
@@ -2,7 +2,6 @@
   "name": "meetup",
   "version": "0.0.0",
   "dependencies": {
-    "express": "~3.4.4"
     },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -16,6 +15,7 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "~0.7.0",
     "grunt-contrib-htmlmin": "~0.1.3",
+    "jpegtran-bin": "0.2.0",
     "grunt-contrib-imagemin": "~0.4.0",
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-contrib-uglify": "~0.2.0",
